[gd_scene load_steps=9 format=3 uid="uid://doov64ejexxfe"]

[ext_resource type="Script" path="res://scenes/entities/enemies/ogre_enemy/ogre_enemy.gd" id="1_6815f"]
[ext_resource type="Texture2D" uid="uid://d0g8hn8xx2d2b" path="res://assets/tiny_dungeon/Tiles/tile_0109.png" id="1_kfiwn"]
[ext_resource type="PackedScene" uid="uid://beb3ndfm2y2hp" path="res://scenes/components/health_component.tscn" id="2_5orup"]
[ext_resource type="PackedScene" uid="uid://b72bh5mxapc2" path="res://scenes/components/experience_drop_component/experience_drop_component.tscn" id="3_1pe10"]
[ext_resource type="PackedScene" uid="uid://be35rd4ikw5qg" path="res://scenes/components/navigator/navigation_agent_2d.tscn" id="3_of85k"]
[ext_resource type="Script" path="res://scenes/components/hitbox_component/hitbox_component.gd" id="6_ly5d2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ktcs2"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lf3sj"]

[node name="OgreEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 0
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_6815f")

[node name="HealthComponent" parent="." instance=ExtResource("2_5orup")]
MAX_HEALTH = 10.0

[node name="ExperienceDropComponent" parent="." instance=ExtResource("3_1pe10")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kfiwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ktcs2")

[node name="NavigationComponent" parent="." instance=ExtResource("3_of85k")]
debug_enabled = false
nav_target = "player"

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 128
collision_mask = 64
script = ExtResource("6_ly5d2")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_lf3sj")
